# electronic

./: .gitignore  .travis.yml  Cargo.toml  README.md
library_eletronic/src/: libs.rs
src/: lib.rs
src/FCA/: mod.rs
src/fca/: capacitancia.rs  condutancia.rs  joule.rs  mod.rs  potencia.rs  resistencia.rs
tests/: fca_test.rs
