[package]
name = "library_eletronic"
version = "0.1.0"
authors = ["deyvison <deyvison.guilherme@live.com>"]
description = "Biblioteca de cálculos de eletrônica"
documentation = "..."
homepage = "..."
repository = "https://github.com/deyvisonguilherme/library_electronic.git"
readme = ".."
keywords = ["eletrônica","eletronica", "eletronic", "circuito","circuit"]
license = "(GPL-3.0) https://spdx.org/licenses/AGPL-3.0.html"
license-file = "..."

[dependencies]
