[package]
name = "electronic"
version = "0.1.0"
authors = ["deyvison <deyvison.guilherme@live.com>"]
description = "Biblioteca de cálculos de eletrônica"
documentation = "..."
homepage = "..."
repository = "https://github.com/deyvisonguilherme/electronic.git"
readme = "README.md"
keywords = ["eletrônica","eletronica", "eletronic", "circuito","circuit"]
license = "GPL-3.0"

[dependencies]
